# cyclepix

./: .gitignore  README.md  buffer.py  config.py  dataset.py  discriminator.py  generator.py  inference.ipynb  main.ipynb  pyproject.toml  train.py  utils.py
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: cyclegan-aivazovsky-unet.ipynb
src/: blocks.py  buffer.py  cyclegan.py  dataset.py  discriminator.py  generator.py  resnet.py  unet.py  utils.py
xai/: report.md
xai/src_xai/: score_cam.py  utils.py
